--- a/first/src/app/app.component.css
+++ b/first/src/app/app.component.css
@@ -8,9 +8,13 @@
   background-color: #05224e;
   margin: 0;
   padding: 0;
-  justify-content:start;
- 
+  justify-content: start;
+}
 
+.dropdown:hover .dropdown-menu {
+  display: block;
+  margin-top: 0;
+  /*stop auto close of menu*/
 }
 
 .main-div {
@@ -23,22 +27,22 @@
   background-image: linear-gradient(#0b9fd4, #005c90);
 }
 
-li{
-   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+li {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   color: white;
-   font-size: 15px;
+  font-size: 15px;
 }
 
-a{
-  
-  color:white;
+a {
+  color: white;
   text-decoration: none;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: small;
   margin: auto;
 }
 
-.fontcolor{
+.fontcolor {
   color: black;
 }
 
@@ -50,7 +54,7 @@ a{
   position: relative;
   padding-top: 2px;
 }
-  
+
 .dropdown-menu .dropdown-submenu {
   left: 100%;
   top: -2px;
@@ -63,12 +67,8 @@ a{
 
 .arrow {
   margin-left: 50px;
-  position:relative;
-  top:5px;
+  position: relative;
+  top: 5px;
   font-size: 2rem;
   line-height: 0;
 }
-
-
-
-
