--- a/first/src/app/app.component.css
+++ b/first/src/app/app.component.css
@@ -1,21 +1,18 @@
+.nav1{
+  height: 80px;
+
+}
+
 .div1 {
   height: 80px;
   background-image: linear-gradient(#0b9fd4, #005c90);
 }
 
-.navbar {
-  height: 70px;
-  background-color: #05224e;
-  margin: 0;
-  padding: 0;
-  justify-content:start;
- 
-
-}
 
 .main-div {
   height: 500px;
-  background-color: white;
+  background-color:white;
+  width: 100%;
 }
 
 .footer-div {
@@ -23,34 +20,15 @@
   background-image: linear-gradient(#0b9fd4, #005c90);
 }
 
-li{
-   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  color: white;
-   font-size: 15px;
-}
-
-a{
-  
-  color:white;
-  text-decoration: none;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: small;
-  margin: auto;
-}
 
 .fontcolor{
-  color: black;
+  color:white;
 }
 
 .dropdown-menu > li:hover > .dropdown-submenu {
   display: block;
 }
 
-.dropdown-menu li {
-  position: relative;
-  padding-top: 2px;
-}
-  
 .dropdown-menu .dropdown-submenu {
   left: 100%;
   top: -2px;
@@ -61,13 +39,36 @@ a{
   left: auto;
 }
 
+li{
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+ color: white;
+  font-size: 15px;
+}
+
+ a {
+  
+  color:white;
+  text-decoration: none;
+  font-family:inherit;
+  font-size: 11pt;
+  margin-right: 30px;
+ 
+}
+
 .arrow {
-  margin-left: 50px;
+  margin-left: 60px;
   position:relative;
   top:5px;
   font-size: 2rem;
   line-height: 0;
 }
+
+navbar-style{
+  
+  box-shadow: 0 5px 10px #efefef  ;
+}
+
+
 
 
 
