Created Navbar component. Moved navbar div from app.component.html to navbar.component.html

--- a/first/src/app/navbar/navbar.component.html
+++ b/first/src/app/navbar/navbar.component.html
@@ -1,7 +1,4 @@
-<div class="div1">
-  <app-header></app-header>
-</div>
-<div>
+<div id>
   <nav class="navbar navbar-expand-md navbar-light bg-dark">
     <img src="../assets/sarmi2-09.jpg" alt="logo" height="60" width="60" />
     <button
@@ -130,10 +127,4 @@
       </ul>
     </div>
   </nav>
-</div>
-<div class="main-div">
-  <router-outlet></router-outlet>
-</div>
-<div class="footer-div">
-  <app-footer></app-footer>
 </div>
