--- a/first/src/app/navbar/navbar.component.css
+++ b/first/src/app/navbar/navbar.component.css
@@ -1,17 +1,20 @@
-.div1 {
+.nav1{
   height: 80px;
-  background-image: linear-gradient(#0b9fd4, #005c90);
+
 }
 
-.main-div {
-  height: 500px;
-  background-color:white;
-  width: 100%;
+.navbar {
+  height: 70px;
+  background-color: #05224e;
+  margin: 0;
+  padding: 0;
+  justify-content: start;
 }
 
-.footer-div {
-  height: 200px;
-  background-image: linear-gradient(#0b9fd4, #005c90);
+.dropdown:hover .dropdown-menu {
+  display: block;
+  margin-top: 0;
+  /*stop auto close of menu*/
 }
 
 li {
