--- a/first/src/app/app.component.css
+++ b/first/src/app/app.component.css
@@ -8,19 +8,11 @@
   background-image: linear-gradient(#0b9fd4, #005c90);
 }
 
-.navbar {
-  height: 70px;
-  background-color: #05224e;
-  margin: 0;
-  padding: 0;
-  justify-content: start;
+.navbar{
+  background-color: #063970
 }
 
-.dropdown:hover .dropdown-menu {
-  display: block;
-  margin-top: 0;
-  /*stop auto close of menu*/
-}
+
 
 .main-div {
   height: 500px;
@@ -52,7 +44,14 @@ a {
   color: black;
 }
 
-.dropdown-menu > li:hover > .dropdown-submenu {
+.navbar.dropdown:hover .dropbtn {
+  background-color: #005c90;
+  color: aqua;
+} 
+
+
+
+.dropdown-menu li:hover> .dropdown-submenu {
   display: block;
 }
 
@@ -94,3 +93,10 @@ li{
   font-size: 2rem;
   line-height: 0;
 }
+
+
+#home{
+  color: white;
+}
+
+
