--- a/first/src/app/app.component.html
+++ b/first/src/app/app.component.html
@@ -1,17 +1,21 @@
+
 <div class="div1"></div>
+<script>
+  
+</script>
 <div>
-  <nav class="navbar navbar-expand-md navbar-light bg-dark">
+  <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
     <img src="../assets/sarmi2-09.jpg" alt="logo" height="60" width="60">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class=" nav-item active">
-          <a style="color: white;" class=" nav-link " routerLink="/home" routerLinkActive="false">Home </a>
+    <div class="sample collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav nav justify-content-end">
+        <li class=" nav-item">
+          <a class="nav-link" routerLink="/home" routerLinkActive="false">Home </a>
         </li>
         <li class="nav-item dropdown">
-          <a style="color: white;" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Patient section
           </a>
           <div  style="background-color: #005c90" class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -23,7 +27,7 @@
                     <li>
                       <a class="dropdown-item" routerLink="/dentistry">Dentistry</a>
                     </li>
-                    <li >
+                    <li>
                       <hr class="dropdown-divider" />
                       <a  class="dropdown-item"  routerLink="/cardiology">Cardiology</a>
                     </li>
@@ -56,7 +60,7 @@
           </div>
         </li>
         <li class="nav-item dropdown">
-          <a style="color: white;" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             doctor section
           </a>
           
@@ -66,12 +70,12 @@
         </li>
 
         <li>
-          <li class=" nav-item active">
-            <a style="color: white;" class=" nav-link "routerLink="/about-us" routerLinkActive="false">About-us </a>
+          <li class=" nav-item">
+            <a class=" nav-link "routerLink="/about-us" routerLinkActive="false" aria-haspopup="true" aria-expanded="false">About-us </a>
           </li>
 
-          <li class=" nav-item active">
-            <a style="color: white;" class=" nav-link" routerLink="/contact-us" routerLinkActive="false">Contact-us </a>
+          <li class=" nav-item">
+            <a class=" nav-link" routerLink="/contact-us" routerLinkActive="false" aria-haspopup="true" aria-expanded="false"> Contact-us </a>
           </li>
          
         
