--- a/first/src/app/app.component.html
+++ b/first/src/app/app.component.html
@@ -1,5 +1,7 @@
+<div class="div1">
+  <app-header></app-header>
+</div>
 
-<div class="div1"></div>
 <div>
   <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
     <img src="../assets/sarmi2-09.jpg" alt="logo" height="60" width="60">
@@ -60,7 +62,7 @@
           <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             doctor section
           </a>
-          
+
           <div style="background-color: #005c90" class="dropdown-menu">
             <a class="dropdown-item" href="#">Doctor Login</a>
           </div>
@@ -74,8 +76,8 @@
           <li class=" nav-item">
             <a class=" nav-link" routerLink="/contact-us" routerLinkActive="false" aria-haspopup="true" aria-expanded="false"> Contact-us </a>
           </li>
-         
-        
+
+
       </ul>
     </div>
   </nav>
@@ -83,4 +85,6 @@
 <div class="main-div">
   <router-outlet></router-outlet>
 </div>
-<div class="footer-div"></div>
+<div class="footer-div">
+  <app-footer></app-footer>
+</div>
