--- a/first/src/app/about-us/about-us.component.html
+++ b/first/src/app/about-us/about-us.component.html
@@ -1,1 +1,23 @@
-<h1>About Us</h1>
+<div><section class="about-us container">
+    <h1 class="text-center mb-5">
+            About
+    </h1>
+    <p>
+        Our hospital is backed by advanced technology,
+        a panel of leading doctors in virtually every speciality along with a team of dedicated support staff,
+        the hospital is dedicated to putting its patients at the heart of its everyday operations.
+    </p>
+
+    <div class="follow text-center">
+        <h4>Follow Us</h4>
+        <a href="#">facebook</a>
+        <a href="#">linkedin</a>
+        <a href="#">youtube</a>
+        <a href="#">instagram</a>
+
+    </div>
+
+
+</section>
+</div>
+
