--- a/first/src/app/contact-us/contact-us.component.html
+++ b/first/src/app/contact-us/contact-us.component.html
@@ -1,1 +1,25 @@
-<h1>Contact us</h1>
+<section class="contact-us">
+    <div class=" login col-lg-4 m-auto" shadow-lg>
+        <form>
+            <h2>Contact Us</h2>
+            <div class = "mb-3">
+                <label for="exampleInputfirstname" class="form-label">FirstName</label>
+                <input type="text" class="form-control" id="exampleInputfirstname" >
+            </div>
+            <div class = "mb-3">
+                <label for="exampleInputlastname" class="form-label">LastName</label>
+                <input type="text" class="form-control" id="exampleInputlastname" >
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Email address</label>
+              <input type="email" class="form-control" placeholder="Enter email" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label">Password</label>
+              <input type="password" class="form-control" placeholder="Enter password" id="exampleInputPassword1">
+            </div>
+            <button type="submit" class="btn btn-primary col-lg-12">Submit</button>
+           <pre></pre>
+          </form>
+    </div>
+</section>
