--- a/first/src/app/navbar/navbar.component.css
+++ b/first/src/app/navbar/navbar.component.css
@@ -14,24 +14,7 @@
     background-image: linear-gradient(#0b9fd4, #005c90);
   }
   
-  li {
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    color: white;
-    font-size: 15px;
-  }
-  
-  a {
-    color: white;
-    text-decoration: none;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: small;
-    margin: auto;
-  }
-  
-  .fontcolor {
-    color: black;
-  }
+
   
   .navbar.dropdown:hover .dropbtn {
     background-color: #005c90;
@@ -40,53 +23,39 @@
   
   
   
-  .dropdown-menu li:hover> .dropdown-submenu {
+.dropdown-menu li:hover> .dropdown-submenu {
     display: block;
-  }
+ }
   
-  .dropdown-menu li {
-    position: relative;
-    padding-top: 2px;
-  }
+ 
   
-  .dropdown-menu .dropdown-submenu {
+.dropdown-menu .dropdown-submenu {
     left: 100%;
     top: -2px;
     background-color: #005c90;
+    padding-right: 0em;
+    margin-right: 0em;
   }
-  .dropdown-menu .dropdown-submenu-left {
-    right: 100%;
-    left: auto;
-  }
-  
-  li{
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-   color: white;
-    font-size: 15px;
-  }
-  
-   a {
-  
-    color:white;
-    text-decoration: none;
-    font-family:inherit;
-    font-size: 11pt;
-    margin-right: 30px;
-  
-  }
-  
-  .arrow {
-    margin-left: 50px;
+ 
+.arrow {
+    margin-left: 2em;
     position: relative;
     top: 5px;
-    font-size: 2rem;
+    font-size: 2em;
     line-height: 0;
-  }
+}
   
-  
-  #home{
-    color: white;
-  }
-  
-  
+
+.navbar ul li a {
+    color:#fff;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-size: 12pt;
+    margin-right: 2em;
+}
+
+ .navbar ul li a:hover{
+    color:darkgoldenrod;
+}
+
   
