updated the about and contact pages

--- a/first/src/app/about-us/about-us.component.html
+++ b/first/src/app/about-us/about-us.component.html
@@ -4,20 +4,17 @@
     </h1>
     <p>
         Our hospital is backed by advanced technology,
-        a panel of leading doctors in virtually every speciality along with a team of dedicated support staff,
-        the hospital is dedicated to putting its patients at the heart of its everyday operations.
+        a panel of leading doctors in virtually every speciality along with a team of dedicated support staff,the hospital is dedicated to putting its patients at the heart of its everyday operations.
     </p>
 
     <div class="follow text-center">
         <h4>Follow Us</h4>
-        <a href="#">facebook</a>
-        <a href="#">linkedin</a>
-        <a href="#">youtube</a>
-        <a href="#">instagram</a>
+        <a href="#">facebook </a>
+        <a href="#"> linkedin </a>
+        <a href="#"> youtube </a>
+        <a href="#"> instagram</a>
 
     </div>
-
-
 </section>
 </div>
 
