--- a/first/src/app/contact-us/contact-us.component.html
+++ b/first/src/app/contact-us/contact-us.component.html
@@ -15,8 +15,8 @@
               <input type="email" class="form-control" placeholder="Enter email" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
             <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" placeholder="Enter password" id="exampleInputPassword1">
+                <label for="comment">Comment:</label>
+                <textarea class="form-control" rows="2" id="comment" name="text"></textarea>
             </div>
             <button type="submit" class="btn btn-primary col-lg-12">Submit</button>
            <pre></pre>
