--- a/first/src/app/about-us/about-us.component.css
+++ b/first/src/app/about-us/about-us.component.css
@@ -1,16 +1,21 @@
 .about-us{
     background-color:aliceblue;
+    padding: 1% 0% 0% 3%;
+    width : 100%;
+    height: 50%;
 }
 .follow a{
-    padding: 10px;
+    
     color: black;
     font-weight: bold;
+    height: 100%;
 
 }
-@media screen and (max-width:600px){
+@media screen and (max-width:100%){
     .follow a 
     {
-        padding: 5px;
+        padding:0% 2% 0% 2%;
+
     }
     
 }
