--- a/first/src/app/app.component.html
+++ b/first/src/app/app.component.html
@@ -1,1 +1,9 @@
+<div class="div1">
+  <app-header></app-header>
+</div>
+
 <app-navbar></app-navbar>
+
+<div class="footer-div">
+  <app-footer></app-footer>
+</div>
