--- a/first/src/app/navbar/navbar.component.css
+++ b/first/src/app/navbar/navbar.component.css
@@ -14,16 +14,7 @@
     background-image: linear-gradient(#0b9fd4, #005c90);
   }
   
-
-  
-  .navbar.dropdown:hover .dropbtn {
-    background-color: #005c90;
-    color: aqua;
-  } 
-  
-  
-  
-.dropdown-menu li:hover> .dropdown-submenu {
+  .dropdown-menu li:hover> .dropdown-submenu {
     display: block;
  }
   
@@ -31,10 +22,8 @@
   
 .dropdown-menu .dropdown-submenu {
     left: 100%;
-    top: -2px;
+    top: 5px;
     background-color: #005c90;
-    padding-right: 0em;
-    margin-right: 0em;
   }
  
 .arrow {
@@ -58,4 +47,7 @@
     color:darkgoldenrod;
 }
 
-  
+.nav-item{
+    margin-right: 2em;
+}
+
