--- a/first/src/app/navbar/navbar.component.html
+++ b/first/src/app/navbar/navbar.component.html
@@ -1,22 +1,23 @@
 
+
 <div class="div1">
     <app-header></app-header>
   </div>
   
   <div>
-    <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
-      <img src="../assets/sarmi2-09.jpg" alt="logo" height="60" width="60">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <a style="margin-right:1em;"><img src="../assets/sarmi2-09.jpg" alt="logo" height="60" width="60"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="sample collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav nav justify-content-end">
-          <li class=" nav-item">
+          <li class="nav-item">
             <a class="nav-link" routerLink="/home" routerLinkActive="false">Home </a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Patient section
+              Patient Section
             </a>
             <div  style="background-color: #005c90" class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li>
@@ -61,7 +62,7 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              doctor section
+              Doctor Section
             </a>
   
             <div style="background-color: #005c90" class="dropdown-menu">
@@ -70,15 +71,21 @@
           </li>
   
           <li>
-            <li class=" nav-item">
+            <li class="nav-item">
               <a class=" nav-link "routerLink="/about-us" routerLinkActive="false" aria-haspopup="true" aria-expanded="false">About-us </a>
             </li>
   
-            <li class=" nav-item">
+            <li class="nav-item">
               <a class=" nav-link" routerLink="/contact-us" routerLinkActive="false" aria-haspopup="true" aria-expanded="false">Contact-us </a>
             </li>
-  
-  
+              <li>
+                <form class="form-inline">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                  </form>
+               
+              </li>
+          
         </ul>
       </div>
     </nav>
