--- a/first/src/app/app.component.html
+++ b/first/src/app/app.component.html
@@ -4,6 +4,10 @@
 
 <app-navbar></app-navbar>
 
+<div class="main-div">
+  <router-outlet></router-outlet>
+</div>
+
 <div class="footer-div">
   <app-footer></app-footer>
 </div>
