--- a/first/src/app/navbar/navbar.component.html
+++ b/first/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="sticky-top"> 
   <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
     <img src="../assets/sarmi2-09.jpg" alt="logo" height="60" width="60" />
     <button
@@ -127,7 +127,7 @@
             placeholder="Search"
             aria-label="Search"
           />
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+          <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">
             Search
           </button>
         </form>
@@ -135,6 +135,4 @@
     </div>
   </nav>
 </div>
-<div class="main-div">
-  <router-outlet></router-outlet>
-</div>
+
