--- a/first/src/app/app.component.css
+++ b/first/src/app/app.component.css
@@ -1,15 +1,15 @@
-.div1 {
-    height: 80px;
+.header-div {
+    height:8vh;
     background-image: linear-gradient(#0b9fd4, #005c90);
   }
-  
+
   .main-div {
     height: 500px;
     background-color:white;
     width: 100%;
   }
-  
+
   .footer-div {
-    height: 200px;
+    height: 7vh;
     background-image: linear-gradient(#0b9fd4, #005c90);
   }
