--- a/first/src/app/app.component.html
+++ b/first/src/app/app.component.html
@@ -8,6 +8,6 @@
   <router-outlet></router-outlet>
 </div>
 
-<div class="footer-div">
+<div class="footer-div slider-item">
   <app-footer></app-footer>
 </div>
