--- a/first/src/app/app.component.css
+++ b/first/src/app/app.component.css
@@ -10,6 +10,20 @@
   }
 
   .footer-div {
-    height: 7vh;
+    height: 60vh;
     background-image: linear-gradient(#0b9fd4, #005c90);
   }
+@media only screen and (max-width: 979px)
+{
+  .slider-item
+  {
+    height:80vw;
+  }
+}
+@media only screen and (max-width: 600px)
+{
+  .slider-item
+  {
+    height:100vw;
+  }
+}
