--- a/first/src/app/navbar/navbar.component.html
+++ b/first/src/app/navbar/navbar.component.html
@@ -41,20 +41,25 @@
                 >Available Treatments<Span class="arrow">&raquo;</Span></a
               >
               <ul class="dropdown-menu dropdown-submenu">
+
                 <li>
-                  <a class="dropdown-item" routerLink="/dentistry">Dentistry</a>
-                </li>
-                <li>
-                  <hr class="dropdown-divider" />
                   <a class="dropdown-item" routerLink="/cardiology"
-                    >Cardiology</a
-                  >
-                </li>
+                  >Cardiology
+                </a>
+              </li>
+              <li>
+                <hr class="dropdown-divider" />
+                <a class="dropdown-item" routerLink="/oncolgy">Oncology</a>
+              </li>
+              <li>
+                <hr class="dropdown-divider" />
+                <a class="dropdown-item" routerLink="/dentistry">Dentistry</a>
+              </li>
                 <li>
                   <hr class="dropdown-divider" />
-                  <a class="dropdown-item" routerLink="/orthopaedics"
-                    >Orthopaedics</a
-                  >
+                  <a class="dropdown-item" routerLink="/Orthopaedics"
+                    >Orthopaedics
+                  </a>
                 </li>
                 <li>
                   <hr class="dropdown-divider" />
@@ -64,7 +69,7 @@
             </li>
             <li>
               <hr class="dropdown-divider" />
-              <a class="dropdown-item" href="#">Emengency/Casulty</a>
+              <a class="dropdown-item" href="#">Emergency/Casulty</a>
             </li>
             <li>
               <hr class="dropdown-divider" />
@@ -89,15 +94,14 @@
             aria-haspopup="true"
             aria-expanded="false"
           >
-            doctor section
+            Doctor section
           </a>
 
           <div style="background-color: #005c90" class="dropdown-menu">
             <a class="dropdown-item" href="#">Doctor Login</a>
           </div>
         </li>
-
-        <li></li>
+        <!-- <li></li> -->
         <li class="nav-item">
           <a
             class="nav-link"
