routing added to new component

--- a/first/src/app/navbar/navbar.component.html
+++ b/first/src/app/navbar/navbar.component.html
@@ -49,7 +49,7 @@
               </li>
               <li>
                 <hr class="dropdown-divider" />
-                <a class="dropdown-item" routerLink="/oncolgy">Oncology</a>
+                <a class="dropdown-item" routerLink="/oncology">Oncology</a>
               </li>
               <li>
                 <hr class="dropdown-divider" />
@@ -57,7 +57,7 @@
               </li>
                 <li>
                   <hr class="dropdown-divider" />
-                  <a class="dropdown-item" routerLink="/Orthopaedics"
+                  <a class="dropdown-item" routerLink="/orthopaedics"
                     >Orthopaedics
                   </a>
                 </li>
