--- a/first/src/app/app.component.css
+++ b/first/src/app/app.component.css
@@ -3,6 +3,10 @@
   background-image: linear-gradient(#0b9fd4, #005c90);
 }
 
+.navbar-div{
+  position: relative;
+}
+
 .main-div {
   height: 500px;
   background-color: white;
