--- a/first/src/app/app.component.html
+++ b/first/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div class="header-div">
   <app-header></app-header>
 </div>
-
-<app-navbar></app-navbar>
+<div class="navbar-div">
+  <app-navbar></app-navbar>
+</div>
 
 <div class="main-div">
   <router-outlet></router-outlet>
