--- a/first/src/app/navbar/navbar.component.html
+++ b/first/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="sticky-top"> 
+<div class="sticky-top">
   <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
     <img src="../assets/sarmi2-09.jpg" alt="logo" height="60" width="60" />
     <button
@@ -69,19 +69,20 @@
             </li>
             <li>
               <hr class="dropdown-divider" />
-              <a class="dropdown-item" href="#">Emergency/Casulty</a>
+              <a class="dropdown-item" routerLink="/emergency-casaulty" href="#">
+                Emergency/Casualty</a>
             </li>
             <li>
               <hr class="dropdown-divider" />
-              <a class="dropdown-item" href="#">Accommodation</a>
+              <a class="dropdown-item" routerLink="/accomodation" href="#">Accommodation</a>
             </li>
             <li>
               <hr class="dropdown-divider" />
-              <a class="dropdown-item" href="#">Canteen Service</a>
+              <a class="dropdown-item" routerLink="canteen-service" href="#">Canteen Service</a>
             </li>
             <li style="margin-bottom: 10px">
               <hr class="dropdown-divider" />
-              <a class="dropdown-item" href="#">Available Government Schemes</a>
+              <a class="dropdown-item" routerLink="available-gov-schemes" href="#">Available Government Schemes</a>
             </li>
           </div>
         </li>
@@ -98,7 +99,7 @@
           </a>
 
           <div style="background-color: #005c90" class="dropdown-menu">
-            <a class="dropdown-item" href="#">Doctor Login</a>
+            <a class="dropdown-item" routerLink="/doctor-login" href="#">Doctor Login</a>
           </div>
         </li>
         <!-- <li></li> -->
