changed lifecare to Lifeplus

--- a/first/src/app/footer/footer.component.html
+++ b/first/src/app/footer/footer.component.html
@@ -3,10 +3,10 @@
     <div class="row text-centre text-md-left">
       <div class="col-md-4 col-lg-4 col-xl-5 mx-auto">
         <h5 class="text-uppercase mb-4 font-weight-bold text-warning">
-          LifeCare
+          Lifeplus
         </h5>
         <p class="text-justify">
-          Lifecare, a 200-bed multi-specialty hospital in Mumbai is the hallmark
+          Lifeplus, a 200-bed multi-specialty hospital in Mumbai is the hallmark
           of international quality healthcare standards for more than two
           decades. Patients can avail services of highly skilled team of
           clinicians and well-trained staff with cutting-edge technology.</p>
