--- a/first/src/app/app.component.css
+++ b/first/src/app/app.component.css
@@ -8,11 +8,11 @@
 }
 
 .main-div {
-  height: 500px;
   background-color: white;
   width: 100%;
 }
 
 .footer-div {
   background-image: linear-gradient(#0b9fd4, #005c90);
+  margin-top: 2%;
 }
