--- a/first/src/app/header/header.component.html
+++ b/first/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header-content">
   <!-- Mastek millenium centre,Millenium business park, mahape TTC,Navi Mumbai 400710 -->
   <img src="https://img.icons8.com/fluency/96/000000/worldwide-location.png" height="30" width="30">
-  <P class="d-xs-none"> Millenium business park, Mahape TTC, Navi Mumbai - 400 710</P>
+  <P class="d-xs-none"> Lifeplus business park, Mahape TTC, Navi Mumbai - 400 710</P>
   <img src="https://img.icons8.com/flat-round/96/ffffff/phone.png" height="30" width="30">
   <p class="d-xs-none"> (+91) 987-654-3210 / (0215) 778-798 </p>
   <img src="https://img.icons8.com/color/96/000000/circled-envelope.png" height="35" width="35">
