fixes in anujs work

--- a/first/src/app/navbar/navbar.component.html
+++ b/first/src/app/navbar/navbar.component.html
@@ -1,5 +1,4 @@
-<div class="sticky-top"> 
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+
 <div class="sticky-top">
   <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
     <img src="../assets/sarmi2-09.jpg" alt="logo" height="60" width="60" />
@@ -39,7 +38,7 @@
             aria-labelledby="navbarDropdown"
           >
             <li>
-              <a class="dropdown-item" href="#"
+              <a class="dropdown-item"
                 >Available Treatments<Span class="arrow">&raquo;</Span></a
               >
               <ul class="dropdown-menu dropdown-submenu">
@@ -71,27 +70,26 @@
             </li>
             <li>
               <hr class="dropdown-divider" />
-              <a class="dropdown-item" routerLink="/emergency-casaulty" href="#">
+              <a class="dropdown-item" routerLink="/emergency-casaulty">
                 Emergency/Casualty</a>
             </li>
             <li>
               <hr class="dropdown-divider" />
-              <a class="dropdown-item" routerLink="/accomodation" href="#">Accommodation</a>
+              <a class="dropdown-item" routerLink="/accommodation">Accommodation</a>
             </li>
             <li>
               <hr class="dropdown-divider" />
-              <a class="dropdown-item" routerLink="canteen-service" href="#">Canteen Service</a>
+              <a class="dropdown-item" routerLink="canteen-service">Canteen Service</a>
             </li>
             <li style="margin-bottom: 10px">
               <hr class="dropdown-divider" />
-              <a class="dropdown-item" routerLink="available-gov-schemes" href="#">Available Government Schemes</a>
+              <a class="dropdown-item" routerLink="available-gov-schemes">Available Government Schemes</a>
             </li>
           </div>
         </li>
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
-            href="#"
             role="button"
             data-toggle="dropdown"
             aria-haspopup="true"
@@ -101,7 +99,7 @@
           </a>
 
           <div style="background-color: #005c90" class="dropdown-menu">
-            <a class="dropdown-item" routerLink="/doctor-login" href="#">Doctor Login</a>
+            <a class="dropdown-item" routerLink="/doctor-login">Doctor Login</a>
           </div>
         </li>
         <!-- <li></li> -->
