--- a/first/src/app/app.component.css
+++ b/first/src/app/app.component.css
@@ -1,23 +1,12 @@
-.header-div {
-  height: 8vh;
-  background-image: linear-gradient(#0b9fd4, #005c90);
+.footer-div
+{
+  position: relative;
+  background-image: linear-gradient(#0b9fd4, #005c90); 
 }
-
-.navbar-div{
+.main-div{
   position: relative;
 }
 
-.main-div {
-<<<<<<< HEAD
-  position: relative;
-  height: 50em;
-=======
->>>>>>> 60f5b2d103754daaae00a1dbf93a157f86c426da
-  background-color: white;
-  width: 100%;
-}
-
-.footer-div {
-  background-image: linear-gradient(#0b9fd4, #005c90);
-  margin-top: 2%;
+.dropdown-div{
+  height: 100vh;
 }
