--- a/first/src/app/header/header.component.css
+++ b/first/src/app/header/header.component.css
@@ -12,6 +12,11 @@ p{
   font-size: 0.75em;
   color: white;
 }
+
+.header-content{
+  background-image: linear-gradient(#0b9fd4, #005c90);
+}
+
 @media only screen and (max-width: 800px) {
   img{
     display: block;
