--- a/first/src/app/home/home.component.html
+++ b/first/src/app/home/home.component.html
@@ -1,5 +1,4 @@
-<h1>student list</h1>
-    <h1 class="text-center">hello</h1>
+
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -8,13 +7,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="..." alt="First slide">
+          <img class="d-block w-100" src="../assets/caro1.jpg" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="..." alt="Second slide">
+          <img class="d-block w-100" src="../assets/caro2.jpg" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="..." alt="Third slide">
+          <img class="d-block w-100" src="../assets/caro4.jpg" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -25,12 +24,4 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-</div>
-<div>
-  <div *ngfor ="let student students">
-    <p> name:    {{student.name}}  </p>
-    <p> rollno: {{student.rollno}} </p> 
-    <p> class:  {{student.class}} </p> 
-    <p> id:      {{student.id}} </p> 
-  </div>
 </div>
