Contact form updated

--- a/first/src/app/contact-us/contact-us.component.css
+++ b/first/src/app/contact-us/contact-us.component.css
@@ -9,7 +9,11 @@
 
     background-color: white;
     padding: 0% 2% 1% 2%;
-    margin: 10% 30% 10% 30%;
+    margin: 1% 30% 5% 30%;
+}
+.error-msg
+{
+    color: red;
 }
 
 @media screen and (max-width:600px) {
