--- a/first/src/app/contact-us/contact-us.component.html
+++ b/first/src/app/contact-us/contact-us.component.html
@@ -1,25 +1,48 @@
 <section class="contact-us">
-    <div class=" login col-lg-4 m-auto" shadow-lg>
-        <form>
+    <div class="login col-lg-4 m-auto" shadow-lg>
+        <form [formGroup]="contact">
             <h2>Contact Us</h2>
-            <div class = "mb-3">
-                <label for="exampleInputfirstname" class="form-label">FirstName</label>
-                <input type="text" class="form-control" id="exampleInputfirstname" >
+            <div class="form-group">
+                <label for="firstname" class="form-label">FirstName</label>
+                <input type="text" class="form-control" placeholder="Name" id="firstname" name="firstname"
+                    formControlName="firstname" ngModel required />
+                <span class="error-msg" *ngIf="
+            contact.get('firstname')?.errors &&
+            contact.get('firstname')?.touched
+          ">This is required
+                </span>
             </div>
-            <div class = "mb-3">
-                <label for="exampleInputlastname" class="form-label">LastName</label>
-                <input type="text" class="form-control" id="exampleInputlastname" >
+            <div class="form-group">
+                <label for="lastname" class="form-label">LastName</label>
+                <input type="text" class="form-control" placeholder="Surname" id="lastname" name="lastname"
+                    formControlName="lastname" ngModel required />
+                <span class="error-msg" *ngIf="
+            contact.get('lastname')?.errors && contact.get('lastname')?.touched
+          ">This is required</span>
             </div>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" placeholder="Enter email" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <div class="form-group">
+                <label for="email" class="form-label">Email address </label>
+                <input type="email" class="form-control" placeholder="eg. abc@gmail.com" id="email" name="email"
+                    aria-describedby="emailHelp" required formControlName="email" ngModel required />
+                <span class="error-msg" *ngIf="contact.get('email')?.errors && contact.get('email')?.touched">This is
+                    required
+                </span>
             </div>
-            <div class="mb-3">
-                <label for="comment">Comment:</label>
-                <textarea class="form-control" rows="2" id="comment" name="text"></textarea>
+            <div class="form-group">
+                <label for="comment" class="form-label">Comment:</label>
+                <textarea class="form-control" rows="2" id="comment" name="comment" formControlName="comment" ngModel
+                    required>
+        </textarea>
+                <span class="error-msg" *ngIf="
+            contact.get('comment')?.errors && contact.get('comment')?.touched
+          ">This is required
+                </span>
             </div>
-            <button type="submit" class="btn btn-primary col-lg-12">Submit</button>
-           <pre></pre>
-          </form>
+            <button type="submit" (click)="onSubmit()" class="btn btn-primary col-lg-12">
+                Submit
+            </button>
+            
+        </form>
+        <form [formGroup]="contact" (ngSubmit)="onSubmit()"></form>
     </div>
 </section>
