carocel bud fixed

--- a/first/src/app/navbar/navbar.component.html
+++ b/first/src/app/navbar/navbar.component.html
@@ -16,7 +16,7 @@
     <div class="sample collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/home" routerLinkActive="false"
+          <a class="nav-link" routerLink="/homepage" routerLinkActive="false"
             >Home
           </a>
         </li>
