sample database connection successful

--- a/first/src/app/cardiology/cardiology.component.html
+++ b/first/src/app/cardiology/cardiology.component.html
@@ -1,5 +1,9 @@
+
 <div class="dropdown-div">
     <h1>Cardiology</h1>
+    <li>
+        <a routerLink="/showstudent">save</a>
+    </li>
+    
 </div>
-
 
