--- a/first/src/app/app.component.css
+++ b/first/src/app/app.component.css
@@ -1,6 +1,7 @@
 .footer-div
 {
-  position: relative;
-  background-image: linear-gradient(#0b9fd4, #005c90); 
+  position: relative; 
+  background-color: #003257;
 }
+
 
