--- a/first/src/app/header/header.component.css
+++ b/first/src/app/header/header.component.css
@@ -14,7 +14,7 @@ p{
 }
 
 .header-content{
-  background-image: linear-gradient(#0b9fd4, #005c90);
+  background-color: #003257;
 }
 
 @media only screen and (max-width: 800px) {
