header css paragraph visibility on media query

--- a/first/src/app/app.component.css
+++ b/first/src/app/app.component.css
@@ -1,7 +1,9 @@
 .footer-div
 {
-  position: relative; 
+  position: relative;
   background-color: #003257;
 }
 
-
+.header-div{
+display: inline;
+}
