--- a/first/src/app/header/header.component.css
+++ b/first/src/app/header/header.component.css
@@ -1,10 +1,10 @@
 img{
   margin-left: 5vw;
-  display: inline-block;
+  display: inline;
 }
 
 p{
-  display: inline-block;
+  display: inline;
   margin-top: 2.5vh;
   margin-left: 1vw;
   margin-right: 5vw;
@@ -18,7 +18,15 @@ p{
 }
 
 @media only screen and (max-width: 800px) {
+  p{
+    visibility: hidden;
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 800px) {
   img{
-    display: block;
+    display: inline;
+    margin-right: 20%;
   }
 }
