--- a/first/src/app/showstudent/showstudent.component.html
+++ b/first/src/app/showstudent/showstudent.component.html
@@ -2,9 +2,10 @@
 <div class="main-div">
     <h1>student list</h1>
     <div *ngFor = "let student of students">
-      <p> name:    {{student.name}}  </p>
-      <p> rollno: {{student.rollno}} </p> 
-      <p> class:  {{student.class}} </p> 
-      <p> id:      {{student.id}} </p> 
+      <p> id:        {{student.contact_id}}  </p>
+      <p> firstname: {{student.firstname}} </p> 
+      <p> lastname:  {{student.lastname}} </p> 
+      <p> email:     {{student.email_id}} </p> 
+      <p> comment:   {{student.p_comment}} </p> 
     </div>
   </div>
