added routing to book appointment

--- a/first/src/app/cardiology/cardiology.component.html
+++ b/first/src/app/cardiology/cardiology.component.html
@@ -2,7 +2,7 @@
 <div class="dropdown-div">
     <h1>Cardiology</h1>
     <li>
-        <a routerLink="/showstudent">save</a>
+        <a routerLink="/bookAppoitnment">Book Appointments</a>
     </li>
     
 </div>
