--- a/first/src/app/navbar/navbar.component.html
+++ b/first/src/app/navbar/navbar.component.html
@@ -95,11 +95,40 @@
             aria-haspopup="true"
             aria-expanded="false"
           >
-            Doctor section
+            Doctors Section
           </a>
-
           <div style="background-color: #005c90" class="dropdown-menu">
-            <a class="dropdown-item" routerLink="/doctor-login">Doctor Login</a>
+            <li>
+              <a class="dropdown-item"
+                >Doctors<Span class="arrow">&raquo;</Span></a
+              >
+              <ul class="dropdown-menu dropdown-submenu">
+
+                <li>
+                  <a class="dropdown-item" routerLink="/drPrajapati"
+                  >Dr M. Prajapati
+                </a>
+              </li>
+              <li>
+                <hr class="dropdown-divider" />
+                <a class="dropdown-item" routerLink="/drJadhav">Dr R. Jadhav</a>
+              </li>
+              <li>
+                <hr class="dropdown-divider" />
+                <a class="dropdown-item" routerLink="/drSharma">Dr S. Sharma </a>
+              </li>
+                <li>
+                  <hr class="dropdown-divider" />
+                  <a class="dropdown-item" routerLink="/drPatil"
+                    >Dr V. Patil
+                  </a>
+                </li>
+                <li>
+                  <hr class="dropdown-divider" />
+                  <a class="dropdown-item" routerLink="/drDhawan">Dr N. Dhawan</a>
+                </li>
+              </ul>
+            </li>
           </div>
         </li>
         <!-- <li></li> -->
