--- a/first/src/app/Doctors/doctor-prajapati/show-app-for-prajapati/show-app-for-prajapati.component.html
+++ b/first/src/app/Doctors/doctor-prajapati/show-app-for-prajapati/show-app-for-prajapati.component.html
@@ -1,1 +1,35 @@
-<p>show-app-for-prajapati works!</p>
+<div class="table-responsive-sm">
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Patient id</th>
+                <th scope="col">First name</th>
+                <th scope="col">Last name</th>
+                <th scope="col">phone no</th>
+                <th scope="col">email</th>
+                <th scope="col">age</th>
+                <th scope="col">medical complaint</th>
+                <th scope="col">date</th>
+                <th scope="col">time</th>
+                <th scope="col">visiting status</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor= "let Patient of appointment">
+                <td>{{Patient.id}}</td>
+                <td>{{Patient.first_name}}</td>
+                <td>{{Patient.last_name}}</td>
+                <td>{{Patient.phone_no}}</td>
+                <td>{{Patient.email_id}}</td>
+                <td>{{Patient.age}}</td>
+                <td>{{Patient.medical_complaint}}</td>
+                <td>{{Patient.selected_date}}</td>
+                <td>{{Patient.selected_slot}}</td>
+                <td>{{Patient.visiting_status}}</td>
+                
+            </tr>
+        </tbody>
+    </table>
+    
+</div>
