--- a/first/src/app/header/header.component.html
+++ b/first/src/app/header/header.component.html
@@ -5,5 +5,5 @@
   <img src="https://img.icons8.com/flat-round/96/ffffff/phone.png" height="30" width="30">
   <p class="d-xs-none"> (+91) 987-654-3210 / (0215) 778-798 </p>
   <img src="https://img.icons8.com/color/96/000000/circled-envelope.png" height="35" width="35">
-  <p class="d-xs-none"> contactus@lifecare.co.in </p>
+  <p class="d-xs-none"> contactus@lifeplus.co.in </p>
 </div>
