--- a/first/src/app/patient-section/emergency-casualty/emergency-casualty.component.css
+++ b/first/src/app/patient-section/emergency-casualty/emergency-casualty.component.css
@@ -1,3 +1,15 @@
-.emergency-casualty-main{
-  height: 20vmax;
+.card-body{
+  display: inline-block;
+}
+
+.card{
+  display: inline-block;
+  width: 50%;
+  margin-top: -5vh;
+}
+
+.table-div{
+  display: inline-block;
+  width: 40%;
+  margin-top: 5vh;
 }
