changes in casualty

--- a/first/src/app/patient-section/emergency-casualty/emergency-casualty.component.css
+++ b/first/src/app/patient-section/emergency-casualty/emergency-casualty.component.css
@@ -5,11 +5,14 @@
 .card{
   display: inline-block;
   width: 50%;
-  margin-top: -5vh;
+  margin-top: -20%;
 }
 
 .table-div{
   display: inline-block;
   width: 40%;
   margin-top: 5vh;
+}
+table{
+  margin-top: 2vh;
 }
