--- a/first/src/app/patient-section/emergency-casualty/emergency-casualty.component.html
+++ b/first/src/app/patient-section/emergency-casualty/emergency-casualty.component.html
@@ -11,18 +11,17 @@
       </p>
     </div>
   </div>
-
-  <div class="table-div col-sm-3 col-md-6 col-lg-6 col-xl-6">
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">First</th>
-          <th scope="col">Detail</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
+    <div class="table-div col-sm-3 col-md-6 col-lg-6 col-xl-6">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Detail</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
           <th scope="row">1</th>
           <td>Location</td>
           <td>Ground Floor. LC</td>
@@ -35,9 +34,9 @@
         <tr>
           <th scope="row">3</th>
           <td>Service Timing</td>
-          <td>the Bird</td>
+          <td>24 hours Daily</td>
         </tr>
       </tbody>
     </table>
   </div>
-</div>
+  </div>
