--- a/first/src/app/patient-section/canteen-service/canteen-service.component.html
+++ b/first/src/app/patient-section/canteen-service/canteen-service.component.html
@@ -1,1 +1,15 @@
-<p>canteen-service works!</p>
+<div class="canteen-service-main">
+   <!--  col-sm-3 col-md-6 col-lg-6 col-xl-6" -->
+   <div class="canteen-service-para">
+      <h5>Canteen Services</h5>
+      <p>
+         Lifecare hospital also has a well-equipped catering facility for patients,
+         their families, doctors & employees, and also for personal walks. The
+         primary feature of the canteen is to provide anyone who comes in with
+         quality and hygienically protected food.
+      </p>
+   </div>
+   <div  style="display: inline">
+      <img src="../../../assets/canteen.png" alt="canteen_Image" width="200px" height="200px" />
+   </div>
+</div>
