adding to home and canteen

--- a/first/src/app/homepage/homepage.component.html
+++ b/first/src/app/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide homepage-div" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -23,4 +23,19 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
+    <div class="home-tagline">
+      <a href="#" class="logo">
+        <span>H</span>ealth<span>P</span>lus.
+      </a>
+      <h1>
+        <span>Stay</span>
+        <span> Safe,</span>
+        <span> Stay</span>
+        <span> Healthy</span>
+      </h1>
+      <h3>We Care</h3>
+      <a href="#">
+        <button class="button">Learn More</button>
+      </a>
+    </div>
 </div>
