available details added

--- a/first/src/app/about-us/about-us.component.html
+++ b/first/src/app/about-us/about-us.component.html
@@ -1,20 +1,23 @@
-<div><section class="about-us container">
-    <h1 class="text-center mb-5">
-            About
-    </h1>
-    <p>
-        Our hospital is backed by advanced technology,
-        a panel of leading doctors in virtually every speciality along with a team of dedicated support staff,the hospital is dedicated to putting its patients at the heart of its everyday operations.
-    </p>
+<section class="about-us">
+    <div class="col-lg-8 col-sm-8 about-us_page">
+        <h1 class="text-center">
+            <b>About</b>
+        </h1>
+        <div class="main">
+            <p>
+                Our hospital is backed by advanced technology,
+                a panel of leading doctors in virtually every speciality along with a team of dedicated support
+                staff,the hospital is dedicated to putting its patients at the heart of its everyday operations.
+            </p>
 
-    <div class="follow text-center">
-        <h4>Follow Us</h4>
-        <a href="#">facebook </a>
-        <a href="#"> linkedin </a>
-        <a href="#"> youtube </a>
-        <a href="#"> instagram</a>
+            <div class="col-md-4 col-lg-4 col-sm-4 follow">
+                <h4>Follow Us</h4>
+                <a href="#">facebook</a>
+                <a href="#"> linkedin </a>
+                <a href="#"> youtube </a>
+                <a href="#"> instagram</a>
 
+            </div>
+        </div>
     </div>
 </section>
-</div>
-
