--- a/first/src/app/cardiology/cardiology.component.css
+++ b/first/src/app/cardiology/cardiology.component.css
@@ -1,3 +1,12 @@
-.dropdown-div{
+.main{
    height: 100vh;
+}
+.appointment-link{
+   text-align: center;
+}
+button{
+   background-color: blue;
+}
+.Cardiology{
+   background-color: aliceblue;
 }
