--- a/first/src/app/cardiology/cardiology.component.html
+++ b/first/src/app/cardiology/cardiology.component.html
@@ -1,9 +1,29 @@
+<section class="Cardiology">
+    <div class="col-md-8 col-lg-8 col-sm-8 cardiology_page">
+        <h1 class="text-center">
+            <b>Cardiology</b>
+        </h1>
+        <div class ="main">
+            <p>
+                As a one-stop integrated cardiac healthcare destination, our
+                comprehensive range of diagnostic tests, advanced surgical treatments,
+                cardiac rehabilitation and post-operative counselling covers the full
+                spectrum of care close to home.
+            </p>
 
-<div class="dropdown-div">
-    <h1>Cardiology</h1>
-    <li>
-        <a routerLink="/bookAppoitnment">Book Appointments</a>
-    </li>
-    
-</div>
-
+            <h2><b>services provided : </b></h2>
+            <p>
+                <b>HEART ATTACK :</b>
+                Coronary artery disease may lead to heart attacks which require
+                immediate intervention
+            </p>
+            <p>
+                <b>HIGH BLOOD PRESSURE :</b>
+                The detection, prevention and management of blood pressure issues
+            </p>
+            <div class="appointment-link">
+                <a routerLink="/bookAppoitnment"><button><b>Book Appointment</b></button></a>
+            </div>
+        </div>
+    </div>
+</section>
