--- a/first/src/app/dentistry/dentistry.component.html
+++ b/first/src/app/dentistry/dentistry.component.html
@@ -1,1 +1,31 @@
-<h1>Dentistry</h1>
+<section class="Dentistry">
+    <div class="col-md-8 col-lg-8 col-sm-8 dentistry_page">
+        <h1 class="text-center">
+            <b>Dentistry</b>
+        </h1>
+        <div class="main">
+            <p>
+                Our specialists use the best available techniques in a most soothing
+                atmosphere to treat some of the most common to the most complex dental
+                conditions ranging from root canals to wisdom tooth removal, from cavity
+                treatment to the alignment of teeth with braces, as well as dental
+                implants, veneers and crowns.
+            </p>
+
+            <h2><b>services provided : </b></h2>
+            <p>
+                <b>ENDODONTICS :</b>
+                Right from invisible fillings to root canal treatments, we have you
+                covered in every sense of the way
+            </p>
+            <p>
+                <b>PROSTHODONTICS :</b>
+                Our specialists conduct all kinds of dental implants and provide with
+                the best tooth replacement options
+            </p>
+            <div class="appointment-link">
+                <a routerLink="/bookAppoitnment"><button><b>Book Appointment</b></button></a>
+            </div>
+        </div>
+    </div>
+</section>
