--- a/first/src/app/neurology/neurology.component.html
+++ b/first/src/app/neurology/neurology.component.html
@@ -1,4 +1,31 @@
+<section class="Neurology">
+  <div class="col-md-8 col-lg-8 col-sm-8 neurology_page">
+    <h1 class="text-center">
+      <b>Neurology</b>
+    </h1>
+    <div class="main">
+      <p>
+        We bring together experts from neurology, neuropsychology and psychiatry
+        to diagnose and treat complex neurological problems. We have an
+        extensive clinical history in treating the full range of neurological
+        problems including strokes, brain traumas, epilepsy, Parkinson's,
+        multiple sclerosis and neck and spine conditions.
+      </p>
 
-<div class="dropdown-div">
-    <h1>Neurology</h1>
-</div>
+      <h2><b>services provided : </b></h2>
+      <p>
+        <b>DEMENTIA :</b>The evaluation, diagnosis and treatment of individuals
+        suffering from memory disorders such as Alzheimer’s and dementia
+      </p>
+      <p>
+        <b>NEURO-CRITICAL CARE :</b>
+        Emergency care for life threatening neurological emergencies
+      </p>
+      <div class="appointment-link">
+        <a routerLink="/bookAppoitnment"
+          ><button><b>Book Appointment</b></button></a
+        >
+      </div>
+    </div>
+  </div>
+</section>
