--- a/first/src/app/oncology/oncology.component.html
+++ b/first/src/app/oncology/oncology.component.html
@@ -1,4 +1,33 @@
+<section class="Oncology">
+  <div class="col-md-8 col-lg-8 col-sm-8 oncology_page">
+      <h1 class="text-center">
+      <b>oncology</b>
+    </h1>
+    <div class="main">
+      <p>
+        We offer comprehensive care in diagnosing and treating patients of all
+        ages, suffering from solid tumours and haematological malignancies. We
+        are committed at offering compassionate care along with personalized
+        treatment for patients with various cancer types through the use of
+        chemotherapy and targeted therapy
+      </p>
 
-<div class="dropdown-div">
-    <h1>oncology</h1>
-</div>
+      <h2><b>services provided : </b></h2>
+      <p>
+        <b>HEAD AND NECK CANCER:</b>
+        We have extensive experience in traditional and novel approaches to head
+        and neck cancer care
+      </p>
+      <p>
+        <b>LUNG CANCER :</b>
+        At our centre, we give you access to a wide range of experts and
+        treatment options for lung cancer
+      </p>
+      <div class="appointment-link">
+        <a routerLink="/bookAppoitnment"
+          ><button><b>Book Appointment</b></button></a
+        >
+      </div>
+    </div>
+  </div>
+</section>
