--- a/first/src/app/orthopaedics/orthopaedics.component.html
+++ b/first/src/app/orthopaedics/orthopaedics.component.html
@@ -1,4 +1,32 @@
+<section class="Orthopaedics">
+  <div class="col-md-8 col-lg-8 col-sm-8 orthopaedics_page">
+    <h1 class="text-center">
+      <b>Orthopaedics</b>
+    </h1>
+    <div class="main">
+      <p>
+        Our team provides personalized, comprehensive care for a wide range of
+        orthopedic conditions in multiple subspecialties including spine, foot,
+        and ankle, pediatric care, hand and arm, shoulder, and sports medicine.
+        Our clinicians are specialists at the top of their field, providing
+        patients with unparalleled expertise in both surgical and non-operative
+        spinal injuries, joint replacement, and orthopedic surgery.
+      </p>
 
-<div class="dropdown-div">
-    <h1>Orthopaedics</h1>
-</div>
+      <h2><b>services provided : </b></h2>
+      <p>
+        <b>TRAUMA AND FRACTURE :</b>
+        Broken bones, regardless of their complexity, require specialised care which is offered by our experts
+      </p>
+      <p>
+        <b>HAND AND ARM :</b>
+        A completely therapeutic approach to eliminate pain and to maximise movement
+      </p>
+      <div class="appointment-link">
+        <a routerLink="/bookAppoitnment"
+          ><button><b>Book Appointment</b></button></a
+        >
+      </div>
+    </div>
+  </div>
+</section>
