--- a/first/src/app/about-us/about-us.component.css
+++ b/first/src/app/about-us/about-us.component.css
@@ -1,14 +1,13 @@
 .about-us{
     background-color:aliceblue;
-    padding: 1% 0% 0% 3%;
-    width : 100%;
-    height: 50%;
+    width: 100%;
 }
-.follow a{
+.follow{
     
     color: black;
     font-weight: bold;
-    height: 100%;
+    padding-top: 30%;
+    text-align: center;
 
 }
 @media screen and (max-width:100%){
